More Company Updates

--- a/companies/mirati.html
+++ b/companies/mirati.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Mirati Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Mirati Therapeutics in Kinase inhibitors">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Sytle Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -88,22 +94,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   Adagrasib G12C<progress class="progress-bar" value="80" max="100"></progress>
-                                   Commercial for second line NSCLC
-                              </p>
-                              <p class="profiles">
-                                   MRTX1133 G12D<progress class="progress-bar" value="10" max="100"></progress>
-                                   IND approved waiting Phase 1 Start
-                              </p>
-                              <p class="profiles">
-                                   Sitravatinib TAM<progress class="progress-bar" value="60" max="100"></progress>
-                                   Phase 3
-                              </p>
-                              <p class="profiles">
-                                   MRTX1719 PRMT5<progress class="progress-bar" value="5" max="100"></progress>
-                                   Phase 1
+                                   David Meek took over the CEO from Charles Baum last year. I know Charles was a founder 
+                                   scientist so it makes sense they would bring in someone who knows commercial sales as they move into 
+                                   being a commercial company. Only time will tell how well he does for taking the company into its next 
+                                   stage of life.
                               </p>
                          </section> 
                          
@@ -113,17 +109,17 @@
                                    Adagrasib targets a mutation in a key growth pathway called KRAS G12C. The pathway is the RAS pathway 
                                    which is a key growth pathway in all cells. Mutations in this pathway drive uncontrolled cell growth. 
                                    KRAS is a form of RAS that affects tissues like the Lungs, Pancreas and Colon. There are different mutations 
-                                   for KRAS with G12C making up about 32% of the KRAS mutation types. Its one of the most common and plays a big 
+                                   for KRAS with G12C making up about 32% of the KRAS mutation types. It's one of the most common and plays a big 
                                    role in NSCLC and CRC. It makes up about 14% of Lung Adenocarcinomas. The data for this program showed over 40%
-                                   ORR and good CNS pentration as upward of 50% of KRAS NSCLC patients have brain mets.
+                                   ORR and good CNS penetration as upward of 50% of KRAS NSCLC patients have brain mets.
                               </p>
                               <p class="profiles">
                                    MRTX1133 targets another mutation of KRAS with the G12D mutation. This is the second most common type of KRAS 
-                                   mutation representing about 23% of the KRAS mutations. This plays a larger role in Pancratic cancer and less of 
+                                   mutation representing about 23% of the KRAS mutations. This plays a larger role in Pancreatic cancer and less of 
                                    a role in NSCLC. This is in IND enabling studies with no data yet.
                               </p>
                               <p class="profiles">
-                                   Sitravatinib targets a faimily of kinase called the TAM family of kinases. This family shows strong promise at
+                                   Sitravatinib targets a family of kinases called the TAM family of kinases. This family shows strong promise at
                                    affecting cells within the tumor microenvironment. It has multiple benefits like shifting Macrophages back from 
                                    the M2 subtype to the M1 subtype which makes them able to target tumor cells. This is in a long term Overall Survival 
                                    trial in combination with PD-1 inhibitors. 
@@ -147,10 +143,10 @@
                                    successful. I would give this a 3x multiple on the $1 billion that is commercial. That is $3 billion in value.
                               </p>
                               <p class="profiles">
-                                   MRTX1133 affects KRAS G12D in Pancreatic and CRC. This is about 15,000 in pancreatic and 10,000 CRC patients in the US.
+                                   MRTX1133 affects KRAS G12D in Pancreatic and CRC. This is about 15,000 pancreatic and 10,000 CRC patients in the US.
                                    Depending on the data, this could get at least 50% of the market share for about 12,000 total patients. At a price of 
                                    $200,000, that would be $2.4 billion in sales. There will eventually be competitors in this space. I would give this 
-                                   .1 multiple for being in preclinic. That is worth $240 million value.
+                                   .1 multiple for being in preclinic. That is worth $240 million.
                               </p>
                               <p class="profiles">
                                    Sitravatinib is very hard to determine the patient population for PD-1 refractory patients. I think it could earn
@@ -158,7 +154,7 @@
                                    of value with the phase 2 data so far. 
                               </p>
                               <p class="profiles">
-                                   MRTX1719 is an early drug for MTAP deleted cancers. My best guess numbers is at least 10,000 pateints across various 
+                                   MRTX1719 is an early drug for MTAP deleted cancers. My best guess is at least 10,000 patients across various 
                                    types of cancer. I think this could be worth $1 billion in sales if it works out well. That would make it worth $100 
                                    million in value for being preclinical 
                               </p>
@@ -170,7 +166,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   Adagrasib CRC ongoing Phase1/2 
+                                   Adagrasib CRC ongoing Phase 1/2 
                               </p>
                               <p class="profiles">
                                    MRTX1133 Start Phase 1 in early 2023
@@ -197,7 +193,7 @@
                               </p>
                               <p class="profiles">
                                    <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Adagrasib-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
-                                   Stiravatinib Phase 2 Data
+                                   Sitravatinib Phase 2 Data
                                    </a>
                               </p>
                          </section> 
