--- a/companies/monterosa.html
+++ b/companies/monterosa.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Title Page -->
           <title>Monte Rosa Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Monte Rosa Therapueutics in molecular glue degraders">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -81,36 +87,26 @@
                               <p class="profiles">
                                    Monte Rosa is working on molecular degraders often called molecular glues. These are small 
                                    molecules that bind to the E3 ligase and modify its target. This will cause the E3 ligase to bind 
-                                   to the protein of target and tag it for degradation. Then the protein will be loaded into the Proteasome
+                                   to the protein of the target and tag it for degradation. Then the protein will be loaded into the Proteasome
                                    for degradation. These molecular glues tend to be smaller than 
                                    the bifunctional degrader, but they also can have more off target effects. 
                               </p>
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   MRT-2359 Myc<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   NEK7<progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinical
-                              </p>
-                              <p class="profiles">
-                                   CDK2<progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinical
-                              </p>
-                              <p class="profiles">
-                                   VAV1<progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinical
+                                   I have been following Monte Rosa and Markus Warmuth for about a year now. I know they don't 
+                                   present or go to many of the conferences. I think that makes me more cautious of them as I don't 
+                                   get to hear them often to see how they are developing the company. They are starting clinical trials, 
+                                   and we will have to wait and see the data.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   MRT-2359 targets GSPT1 which a protein in the termination of the Myc gene. This will prevent the 
+                                   MRT-2359 targets GSPT1 which is a protein in the termination of the Myc gene. This will prevent the 
                                    transcription of the Myc gene. This inhibits Myc which is a key growth factor in cancer. This is being
                                    developed for Myc driven cancers. They are targeting NSCLC and SCLC for the indications. This is in phase 1, 
                                    but has no data yet.
@@ -122,12 +118,12 @@
                               </p>
                               <p class="profiles">
                                    CDK2 is a Cyclin Dependent Kinase that participates in the cell cycle. The CDK2 works with Cyclin E to activate 
-                                   transciption factor RB that activates the genes in starting DNA replication. This can work in combination with 
+                                   transcription factor RB that activates the genes in starting DNA replication. This can work in combination with 
                                    CDK4/6 inhibitors. This is still in early discovery.
                               </p>
                               <p class="profiles">
                                    VAV1 is a guanine exchange factor that lies in the activation pathway for T cell and B cell receptors. This could 
-                                   have effect in a broad range of T cell and B cell cancers. It is still in early discovery.
+                                   have an effect in a broad range of T cell and B cell cancers. It is still in early discovery.
                               </p>
                          </section>  
 
@@ -137,13 +133,13 @@
                                    Cash $274 million
                               </p>
                               <p class="profiles">
-                                   MRT-2359 is targeting NSCLC which is a very large patient population. Depending on the data, it could reach $1 
-                                   billion in sales. Its still in early phase 1 so I would only give it a .1 multiplier. That makes it worth about
+                                   MRT-2359 is targeting NSCLC which has a very large patient population. Depending on the data, it could reach $1 
+                                   billion in sales. It's still in early phase 1 so I would only give it a .1 multiplier. That makes it worth about
                                    $100 million in value.
                               </p>
                               <p class="profiles">
                                    NEK7 could be a huge indication for inflammatory disorders. It would depend on the data and which diseases it
-                                   works in. There is still a lot of discover on this program. I would give it at least $50 million value
+                                   works in. There is still a lot to discover on this program. I would give it at least $50 million value
                               </p>
                               <p class="profiles">
                                    CDK2 is another good target with a good size indication, but there are some others in this CDK2 space like Blueprint.
