--- a/companies/oxford.html
+++ b/companies/oxford.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Oxford Nanopore Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Oxford Nanopore in Sequencing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -91,9 +97,11 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   They have multiple products with small portable field sequencers, bench top and larger lab sized sequencers.
+                                   I just started following Oxford Nanopore and its CEO Gordon Sanghera. I haven’t even had a chance 
+                                   to hear them present at any conferences yet. It will take some time to follow them and get a feel 
+                                   for the management team.
                               </p>
                               
                          </section> 
@@ -101,10 +109,10 @@
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                              When it comes to sequencing, the nanopore technology tends to have the strength of versatility. 
-                              They have a selection of machines which allow for different applications based on the users needs. 
-                              This is definately one of their strengths. They have significantly closed the gap on accuracy by improving
-                              this technology and the consensus read software. 
+                                   When it comes to sequencing, nanopore technology tends to have the strength of versatility. They have 
+                                   a selection of machines which allow for different applications based on the user's needs. This is 
+                                   definitely one of their strengths. They have significantly closed the gap on accuracy by improving this 
+                                   technology and the consensus read software. 
                               </p>
                          </section>  
 
@@ -116,11 +124,11 @@
                               <p class="profiles">
                                    They currently have about $200 million in annual sales projected for 2022. The market for sequencing is estimated to double 
                                    from 2022 to 2026 from $7 billion to $14 billion. With multiple products on the market, I think Oxford 
-                                   could capture at least $1 billion in sales over the long term. At just 10x sales, that would be worth $5 billion 
+                                   could capture at least $1 billion in sales over the long term. At just 10x sales, that would be worth a $5 billion 
                                    market cap. Their current value would be around $2 billion based on current sales.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.35 billion market cap. Based on the 823 millon shares outstanding, that comes to $3.15. 
+                                   All in, that is a $2.35 billion market cap. Based on the 823 million shares outstanding, that comes to $3.15. 
                               </p>
                          </section>  
 
@@ -135,7 +143,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
-                                   They don't have clinical data as much as they have accuracy rates for their secquencing technology 
+                                   They don't have clinical data as much as they have accuracy rates for their sequencing technology 
                                    they develop. They will continue to drive down cost per genome sequenced over time.
                               </p>
                          </section> 
