More Company Updates

--- a/companies/pacbio.html
+++ b/companies/pacbio.html
@@ -12,6 +12,7 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Pacific Biosciences Profile</title>
 
           <meta charset="UTF-8">
